--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,2 +1,70 @@
-<app-user-platform></app-user-platform>
-<app-channels-views></app-channels-views>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Cantidad de usuarios conectados</h5>
+                    <app-user-platform></app-user-platform>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Programas mas vistos en este momento</h5>
+                    <app-most-viewed-channels-now></app-most-viewed-channels-now>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Total de usuarios por hora</h5>
+                <app-total-users></app-total-users>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Canales más vistos por hora</h5>
+                <app-channels-views></app-channels-views>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Visualizaciones por dispositivo por hora</h5>
+                <app-device-visualization></app-device-visualization>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Programas mas vistos</h5>
+                    <app-most-viewed-programs></app-most-viewed-programs>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Canales mas vistos</h5>
+                    <app-most-viewed-channels></app-most-viewed-channels>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Uso de dispositivos</h5>
+                <app-channels-views></app-channels-views>
+            </div>
+        </div>
+    </div>
+</div>
