--- a/src/app/components/charts/channels-views/channels-views.component.html
+++ b/src/app/components/charts/channels-views/channels-views.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-body">
-      <!-- <h5 class="card-title">{{title}}</h5> -->
+      <h5 class="card-title">{{title}}</h5>
       <!-- <ngx-charts-line-chart
       [scheme]="colorScheme"
       [legend]="legend"
