--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container mt-3">
     <div class="row">
-        <div class="col">
+        <div class="col pr-3">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Cantidad de usuarios conectados</h5>
@@ -21,6 +21,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Total de usuarios por hora</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Cantidad de usuarios viendo TV por hora el día Mieércoles 23 de Septiembre de 2020</h6>
                 <app-total-users></app-total-users>
             </div>
         </div>
