first finish line

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Total de usuarios por hora</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Cantidad de usuarios viendo TV por hora el día Mieércoles 23 de Septiembre de 2020</h6>
+                <h6 class="card-subtitle mb-2 text-muted">Cantidad de usuarios viendo TV por hora el día Miércoles 23 de Septiembre de 2020</h6>
                 <app-total-users></app-total-users>
             </div>
         </div>
@@ -30,6 +30,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Canales más vistos por hora</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Usuarios por hora de los 10 canales más vistos el día Miércoles 23 de Septiembre de 2020</h6>
                 <app-channels-views></app-channels-views>
             </div>
         </div>
@@ -38,6 +39,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Visualizaciones por dispositivo por hora</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Usuarios por hora que vieron en los diferentes dispositivos el día Miércoles 23 de Septiembre de 2020</h6>
                 <app-device-visualization></app-device-visualization>
             </div>
         </div>
@@ -64,7 +66,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Uso de dispositivos</h5>
-                <app-channels-views></app-channels-views>
+                <app-devices-usage></app-devices-usage>
             </div>
         </div>
     </div>
