--- a/src/app/components/charts/most-viewed-channels/most-viewed-channels.component.html
+++ b/src/app/components/charts/most-viewed-channels/most-viewed-channels.component.html
@@ -1,1 +1,17 @@
-<p>most-viewed-channels works!</p>
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Programa</th>
+        <th scope="col">Usuarios</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let channel of data">
+        <td scope="row">
+            <img [src]="channel.image">
+            {{channel.name}}
+        </td>
+        <td>{{channel.users}}</td>
+      </tr>
+    </tbody>
+  </table>
