--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,73 +1,49 @@
 <div class="container mt-3">
     <div class="row">
         <div class="col pr-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Cantidad de usuarios conectados</h5>
-                    <app-user-platform></app-user-platform>
-                </div>
-            </div>
+            <h5>Cantidad de usuarios conectados</h5>
+            <app-user-platform></app-user-platform>
         </div>
         <div class="col">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Programas mas vistos en este momento</h5>
-                    <app-most-viewed-channels-now></app-most-viewed-channels-now>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Total de usuarios por hora</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Cantidad de usuarios viendo TV por hora el día Miércoles 23 de Septiembre de 2020</h6>
-                <app-total-users></app-total-users>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Canales más vistos por hora</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Usuarios por hora de los 10 canales más vistos el día Miércoles 23 de Septiembre de 2020</h6>
-                <app-channels-views></app-channels-views>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Visualizaciones por dispositivo por hora</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Usuarios por hora que vieron en los diferentes dispositivos el día Miércoles 23 de Septiembre de 2020</h6>
-                <app-device-visualization></app-device-visualization>
-            </div>
+            <h5 class="card-title">Programas mas vistos en este momento</h5>
+            <app-most-viewed-channels-now></app-most-viewed-channels-now>
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Programas mas vistos</h5>
-                    <app-most-viewed-programs></app-most-viewed-programs>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Canales mas vistos</h5>
-                    <app-most-viewed-channels></app-most-viewed-channels>
-                </div>
-            </div>
+            <h5>Total de usuarios por hora</h5>
+            <h6 class="mb-2 text-muted">Cantidad de usuarios viendo TV por hora el día Miércoles 23 de Septiembre de 2020</h6>
+            <app-total-users></app-total-users>
         </div>
     </div>
     <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Uso de dispositivos</h5>
-                <app-devices-usage></app-devices-usage>
-            </div>
+        <div class="col">
+            <h5>Canales más vistos por hora</h5>
+            <h6 class="mb-2 text-muted">Usuarios por hora de los 10 canales más vistos el día Miércoles 23 de Septiembre de 2020</h6>
+            <app-channels-views></app-channels-views>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h5>Visualizaciones por dispositivo por hora</h5>
+            <h6 class="mb-2 text-muted">Usuarios por hora que vieron en los diferentes dispositivos el día Miércoles 23 de Septiembre de 2020</h6>
+            <app-device-visualization></app-device-visualization>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h5>Programas mas vistos</h5>
+            <app-most-viewed-programs></app-most-viewed-programs>
+        </div>
+        <div class="col">
+            <h5>Canales mas vistos</h5>
+            <app-most-viewed-channels></app-most-viewed-channels>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h5>Uso de dispositivos</h5>
+            <app-devices-usage></app-devices-usage>
         </div>
     </div>
 </div>
