--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -1,7 +1,8 @@
-.card {
-    margin-bottom: 1rem;
-}
-
 .col {
-    padding: 0;
+    padding-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    border: 2px solid gray;
+    border-radius: 10px;
 }
